k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dev-env
  name: dev-env
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dev-env
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dev-env
    spec:
      containers:
      - image: ghcr.io/lemonteaa/dev-env-vscode-k8s:main
        imagePullPolicy: Always
        name: fatdevenv
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/coder
          name: mydir
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mydir
        persistentVolumeClaim:
          claimName: homedir
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    dev.okteto.com/auto-ingress: "true"
  labels:
    app: dev-env
  name: test-serv
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: vscode-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dev-env
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
  name: test-serv
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: test-serv
          servicePort: 8080
        path: /
